--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -3,7 +3,7 @@ name: Terraform Plan
 on:
   push:
     branches:
-      - subbu
+      - venkat-cloudathon-terraform-workflow
     paths:
       - 'cloudathon/**'
 
@@ -53,3 +53,4 @@ jobs:
         run: terraform plan -out=tfplan
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          
