--- a/.github/workflows/tfplan.yml
+++ b/.github/workflows/tfplan.yml
@@ -3,7 +3,7 @@ name: Terraform Plan
 on:
   push:
     branches:
-      - subbu
+      - venkat-cloudathon-terraform-workflow
     paths:
       - 'cloudathon/**'
 
