--- a/.github/workflows/tfapply.yml
+++ b/.github/workflows/tfapply.yml
@@ -59,3 +59,9 @@ jobs:
         run: terraform apply -auto-approve tfplan
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+      # Terraform Destroy
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve tfplan
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
