Destroying cluster and DB

--- a/.github/workflows/tfapply.yml
+++ b/.github/workflows/tfapply.yml
@@ -62,6 +62,6 @@ jobs:
 
       # Terraform Destroy
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve tfplan
+        run: terraform destroy -auto-approve
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
