--- a/.github/workflows/tfapplydbfailover.yml
+++ b/.github/workflows/tfapplydbfailover.yml
@@ -14,7 +14,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: ./cloudathon
+        working-directory: ./Postgresql_failover
 
     steps:
       # Checkout the repository code
