--- a/.github/workflows/tfplan.yml
+++ b/.github/workflows/tfplan.yml
@@ -4,16 +4,19 @@ on:
   push:
     branches:
       - venkat-cloudathon-terraform-workflow
+
 jobs:
   sonarcloud:
     name: SonarCloud Scan
     runs-on: ubuntu-latest
 
     steps:
-      # ✅ Checkout the repository
+      # ✅ Checkout the repository with full history
       - name: Checkout Repository
         uses: actions/checkout@v4
-     
+        with:
+          fetch-depth: 0  # Fetch full history for branch detection
+
       # ✅ Set up JDK 17 (if needed)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -32,15 +35,19 @@ jobs:
           sudo ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner
           sonar-scanner --version
 
-      # ✅ Run Sonar Scanner
+      # ✅ Run Sonar Scanner with verbose logging
       - name: SonarCloud Scan
         run: |
           sonar-scanner \
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+            -Dsonar.projectName="Terraform Cloudathon" \
+            -Dsonar.projectVersion="1.0" \
+            -Dsonar.branch.name=venkat-cloudathon-terraform-workflow \
             -Dsonar.sources=. \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.verbose=true
 
   terraform-plan:
     name: Terraform Plan
