--- a/.github/workflows/tfplan.yml
+++ b/.github/workflows/tfplan.yml
@@ -1,4 +1,4 @@
-name: SonarCloud Scan
+name: Terraform Scanned Plan
 
 on:
   push:
@@ -45,3 +45,62 @@ jobs:
             -Dsonar.sources=. \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+  Terraformplan:
+    name: Terraform Plan
+    runs-on: ubuntu-latest
+    needs: sonarcloud
+    
+    defaults:
+      run:
+        working-directory: ./cloudathon_dbfailover
+
+    steps:
+      # Checkout the repository code
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      # Setup Google Cloud SDK
+      - name: Setup GCP Authentication
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+      # Setup Terraform
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0
+
+      # Initialize Terraform with GCP provider
+      - name: Terraform Init
+        run: terraform init
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+      # Format Terraform files recursively
+      - name: Terraform Format
+        run: terraform fmt -check -recursive
+        continue-on-error: true
+
+      # Validate Terraform configuration
+      - name: Terraform Validate
+        run: terraform validate
+
+      # Generate Terraform Plan
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          
+      # # Terraform Apply
+      # - name: Terraform Apply
+      #   run: terraform apply -auto-approve tfplan
+      #   env:
+      #     GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+      
+      # # Terraform Destroy
+      # - name: Terraform Destroy
+      #   run: terraform destroy -auto-approve
+      #   env:
+      #     GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+      
