--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
-name: Terraform Scanned Plan
+name: SonarCloud Scan
 
 on:
   push:
     branches:
       - main
-      #- hello-world  # Scan all branches
 
 permissions:
   contents: read
