--- a/.github/workflows/tfplan.yml
+++ b/.github/workflows/tfplan.yml
@@ -1,58 +1,20 @@
-name: Terraform Scanned Plan
+name: Terraform Plan Updated
 
 on:
   push:
     branches:
-      - main
-      #- hello-world  # Scan all branches
-
-permissions:
-  contents: read
-  pull-requests: read
+      - venkat-cloudathon-terraform-workflow
+    paths:
+      - 'cloudathon/**'
 
 jobs:
-  sonarcloud:
-    name: SonarCloud Scan
+  TerraformPlan:
+    name: Terraform Plan Updated
     runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17 (if needed)
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      # ✅ Install Sonar Scanner
-      - name: Install Sonar Scanner
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -y unzip
-          curl -Lo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
-          unzip sonar-scanner.zip
-          sudo mv sonar-scanner-5.0.1.3006-linux /opt/sonar-scanner
-          sudo ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner
-          sonar-scanner --version
-
-      # ✅ Run Sonar Scanner
-      - name: SonarCloud Scan
-        run: |
-          sonar-scanner \
-            -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-            -Dsonar.sources=. \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-  Terraformplan:
-    name: Terraform Plan
-    runs-on: ubuntu-latest
-    needs: sonarcloud
     
     defaults:
       run:
-        working-directory: ./cloudathon_dbfailover
+        working-directory: ./cloudathon
 
     steps:
       # Checkout the repository code
@@ -91,16 +53,3 @@ jobs:
         run: terraform plan -out=tfplan
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-          
-      # # Terraform Apply
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve tfplan
-      #   env:
-      #     GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-      
-      # # Terraform Destroy
-      # - name: Terraform Destroy
-      #   run: terraform destroy -auto-approve
-      #   env:
-      #     GOOGLE_CREDENTIALS: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-      
